testsuite/poke.pkl/apop-diag-2.pk
/* { dg-do compile } */

var a = int[2] ();

apop (a); /* { dg-error "apop is not allowed on a bounded array" } */
